--- a/index.html
+++ b/index.html
@@ -411,9 +411,8 @@
 		</div>
 	</div>
 </div>
-<!-- <script src="./validator/validator.js"></script>
-<script src="./validator/validData.js"></script> -->
-<script src="./script/script.js"></script>
+
+<script src="./dist/main.js"></script>
 
 </body>
 </html>
